[project]
name = "mil-rate-calculator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "jinja2>=3.1.6",
    "openpyxl>=3.1.5",
    "pandas>=3.0.2",
    "plotly>=6.7.0",
    "shiny>=1.6.0",
    "shinylive>=0.8.6",
    "shinywidgets>=0.8.0",
]
